2013-11-16  Xian55  <hq.protonox@gmail.com>

	* Block.cs:
	* ChangeLog:
	* BlockManager.cs:
	* BlockDetector.cs: 
